[project]
name = "ibkr-proxy"
version = "0.0.2"
description = "A proxy service for the IBKR API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ibkr-oauth-flow",
    "ruff>=0.12.9",
    "uvicorn>=0.35.0",
    "ibkr-oauth-flow @ git+https://github.com/datawookie/ibkr-oauth-flow@master",
    "bump2version>=1.0.1",
    "pre-commit>=4.3.0",
]

[dependency-groups]
dev = [
    "ibkr-oauth-flow",
    "ruff>=0.12.7",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
ibkr-oauth-flow = { path = "../ibkr-oauth-flow", editable = true }

[project.scripts]
ibkr-proxy = "proxy.main:main"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F"]
