[project]
name = "ibproxy"
version = "0.0.3"
description = "A proxy service for the Interactive Brokers API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ruff>=0.12.9",
    "uvicorn>=0.35.0",
    "ibauth>=0.0.4",
    "bump2version>=1.0.1",
    "pre-commit>=4.3.0",
    "httpx>=0.28.1",
    "curlify2>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
ibproxy = "proxy.main:main"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F"]
